# chart-mcp

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
app/: layout.tsx
app/(chat)/: error.test.tsx  error.tsx  layout.tsx  page.test.tsx  page.tsx
app/chart/: layout.tsx  page.test.tsx  page.tsx
app/login/: layout.tsx  page.test.tsx  page.tsx
backend/: .env.example
chart_mcp/: __init__.py
components/: chat.test.tsx  chat.tsx  messages.test.tsx  messages.tsx
components/chart/: chart-analysis.test.tsx  chart-analysis.tsx
components/finance/: ChartArtifact.test.tsx  backtest-report-artifact.test.tsx  backtest-report-artifact.tsx  finance-chart-artifact.test.tsx  finance-chart-artifact.tsx  fundamentals-card.test.tsx  fundamentals-card.tsx  news-list.test.tsx  news-list.tsx
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  healthcheck.py
docker/searxng/: settings.yml
fastmcp/: __init__.pyi
frontend/ai-chatbot/: .env.example  README.md  biome.jsonc  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
lib/: navigation.test.ts  navigation.ts  session.test.ts  session.ts
lib/demo/: finance.ts
scripts/: test_db_connect.py
src/chart_mcp/: __init__.py  app.py  config.py  mcp_main.py  mcp_server.py  types.py
src/chart_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/prometheus_client/: __init__.py  __init__.pyi
tests/: conftest.py
tests/analysis/: test_streaming_text.py
tests/api/: test_metrics.py  test_search_route.py
types/: external.d.ts
(+206 files in other folders)
